@@ -125,7 +125,7 @@ while ($row1 = mysqli_fetch_assoc($result1)) {
 $succResp = new Response();
 $succResp->stat = "success";
 $succResp->boxes = $boxlist;
-echo json_encode($succResp);
+echo json_encode($succResp, JSON_PARTIAL_OUTPUT_ON_ERROR);
 exit;
 ?>
 
