@@ -1,3 +1,9 @@
+BOARD18 2.5.10 Release Notes
+ 
+Changes from 2.5.9 Release:
+Implemented fix for Issue 160 - Inadequate Game Name editing in board18New
+Implemented fix for Issue 159 - Potential vulnerability to invalid user input 
+
 BOARD18 2.5.9 Release Notes
  
 Changes from 2.5.8 Release:
